detailed sunfire test options
git-svn-id: svn://svn.code.sf.net/p/pmii/code/trunk@2134 2dc5e0b7-7910-0410-9abd-fb16afba6634